--- a/README.asciidoc
+++ b/README.asciidoc
@@ -54,6 +54,12 @@ PUT - для записи данных в индекс(Базу Данных)
 DELETE - для удаления индекса(БД)/поля
 UPGRADE - для обновления поля
 
+команда _cat для просмотра списка индексов
+
+----
+curl 'localhost:9200/_cat/indices?v&pretty'
+----
+
 
 [[JSON]]
 == Отправка JSON файла на сервер:
