--- a/README.asciidoc
+++ b/README.asciidoc
@@ -48,7 +48,7 @@ image::status.jpg[]
 [[Commands]]
 == Базовые команды для работы с БД:
 
-GET - взять данные из индекса(БД)
+GET - взять данные из индекса(БД) '+'
 POST - для добавления пакеты данных в БД и массовой индексации
 PUT - для записи данных в индекс(Базу Данных)
 DELETE - для удаления индекса(БД)/поля
