--- a/README.asciidoc
+++ b/README.asciidoc
@@ -49,10 +49,10 @@ image::status.jpg[]
 == Базовые команды для работы с БД:
 
 GET - взять данные из индекса(БД) +
-POST - для добавления пакеты данных в БД и массовой индексации
-PUT - для записи данных в индекс(Базу Данных)
-DELETE - для удаления индекса(БД)/поля
-UPGRADE - для обновления поля
+POST - для добавления пакеты данных в БД и массовой индексации +
+PUT - для записи данных в индекс(Базу Данных) +
+DELETE - для удаления индекса(БД)/поля +
+UPGRADE - для обновления поля +
 
 команда _cat для просмотра списка индексов
 
