--- a/README.asciidoc
+++ b/README.asciidoc
@@ -54,11 +54,26 @@ PUT - для записи данных в индекс(Базу Данных) +
 DELETE - для удаления индекса(БД)/поля +
 UPGRADE - для обновления поля +
 
-команда _cat для просмотра списка индексов
+команда _cat для просмотра списка индексов: + +
+indices?v - указывает над чем нужно выполнить действие +
+pretty - параметр который влияет на отображение
 
 ----
 curl 'localhost:9200/_cat/indices?v&pretty'
 ----
+
+Команда _mapping - индексы и их поля 
+
+----
+curl 'localhost:9200/_mapping&pretty' 
+----
+только для датафрейма "app":
+----
+curl 'localhost:9200/app/_mapping&pretty' 
+----
+Каждое поле описывается таким образом:
+
+image::field.jpg[]
 
 
 [[JSON]]
