--- a/README.asciidoc
+++ b/README.asciidoc
@@ -60,7 +60,7 @@ UPGRADE - для обновления поля +
 indices?v - указывает над чем нужно выполнить действие +
 pretty - параметр который влияет на отображение
 
-= Просмотр индексов (датасетов):
+ Просмотр индексов (датасетов):
 
 ----
 curl 'localhost:9200/_cat/indices'
@@ -88,7 +88,13 @@ curl -XDELETE 'http://localhost:9200/app?pretty'
 ----
 
 [[JSON]]
-== Отправка JSON файла на сервер:
+== Отправка JSON файла на сервер (Легче делать через jsondump):
+
+Команда 
+
+----
+elasticdump --input=GetGoods.json --output=http://localhost:9200/goods --type=_mappings 
+----
 
 Загрузка JSON файла с помощью команды wget, в файл file.json:
 
