--- a/README.asciidoc
+++ b/README.asciidoc
@@ -123,6 +123,13 @@ curl -H 'Content-Type: application/x-ndjson' -XPOST 'localhost:9200/file/doc/_bu
 С помощью опции -H передается заголовок для индексации данных, говорит что данные будут приходить в формате x-ndjson (сжатый json). 
 
 
+== Поиск данных
+
+= Базовый поиск:
+Вернет 10 первых сущностей
+----
+curl -XGET 'localhost:9200/getgoods/doc/_search?size=10&pretty'
+----
 
 [[upgrade]]
 == Upgrade
